styles.css
body {
  margin: 0px;
  background-color: beige;
}
main {
  margin: 10px;
}
.Heading {
  font-size: 2rem;
  font-weight: bold;
  color: #333;
  margin-bottom: 1rem;
  text-align: center;
  font-family: "Courier New", Courier, monospace;
}
h2 {
  text-align: center;
}
.navbar {
  font-style: normal;
  list-style-type: none;
  background-color: grey;
  color: aliceblue;
  padding: 10px;
  margin: 0px;
  overflow: hidden;
  display: flex;
  justify-content: flex-end;
  list-style: none;
  flex-wrap: wrap;
}
.navbar a {
  transition:
    background-color ease-in-out 0.5s,
    transform ease-in-out 0.5s;
  border-radius: 10px;
  color: white;
  text-decoration: none;
  padding: 10px;
  margin-top: 0px;
  margin-bottom: 0px;
  margin-left: 2px;
  margin-right: 2px;
  display: block;
  text-align: end;
}
.navbar a:hover {
  color: white;
  background-color: rgba(217, 216, 180, 0.523);
  transform: scale(1.05);
}
.tasks{
    display:flex;
    flex-wrap: wrap;
    -ms-flex-align: center;
}
.about{
    display:flex;
    justify-content: center;
}
.container{
  display:flex;
  justify-content: center;
  list-style: none;
}

